# suffixient

./: CMakeLists.txt  LICENSE  README.md  suffixient.cpp
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
data/: inverse.txt  paper_example.txt  small_yeast.fasta
include/: CMakeLists.txt
include/LZ/: CMakeLists.txt  CMakeLists__.txt  MakefileTEMP  README.md
include/LZ/lz77index/: LZ77_LCP_LCS_DS.hpp  Makefile
include/LZ/lz77index/tests/: display.cpp  locate.cpp
include/SLP/: CMakeLists.txt
include/SLP/libcds/src/static/coders/: huff.cpp
include/SLP/libcds/src/static/permutation/: perm.cpp
include/SLP/libcds/src/static/sequence/: BitmapsSequence.cpp  SequenceGMR.cpp  SequenceGMRChunk.cpp  WaveletTreeNoptrs.cpp  wt_node_internal.cpp
include/SLP/libcds/src/static/suffixtree/: factorization.cpp  factorization_var.cpp
include/SLP/slp/: Makefile  RePairSLPIndex.cpp  SLPIndex  SLPIndex.cpp  provaqui.ind  provaqui.samp
include/SLP/slp/Samplings/: binarynode.h
include/SLP/slp/Utils/: SuffixArray.cpp  SuffixArray.h
include/SLP/wslp/: provaqui.docs  wSLPIndex
include/SLP/wslp/utils/: HashWM.cpp  HashWM.h  MemoryManager.h  WordsManager.cpp  WordsManager.h
include/ctriepp/: AlphabetAwareZFastTrie.hpp  CMakeLists.txt  CTriePP.hpp  CuckooHash.hpp  Factory.hpp  Fast.hpp  HashMap.hpp  LongString.hpp  LongStringPC.hpp  TFastTrie.hpp  TPackedTrie.hpp  any.hpp
include/pfp_iterator/: CMakeLists.txt  pfp_iterator.hpp  priority_queue.hpp
index/: CMakeLists.txt  build_test_index.cpp  suffixient_index.hpp
pipeline/: mems_suffixient.py  pfp_suffixient.py  run_suffixient
sources/: CMakeLists.txt  fm.cpp  lc.cpp  linear_time.cpp  one_pass.cpp  one_pass_lcs.cpp  pfp_suffixient.cpp  plain_lc.cpp  stats.cpp  suffixient_onepass.cpp  suffixient_twopass.cpp  test.cpp
